webhoogs/validatingadmissionpolicy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: demo
  name: demo
