webhoogs/validatingadmissionpolicy/namespace2.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: myapp
  name: myapp
