webhoogs/validatingadmissionpolicy/ValidatingAdmissionPolicyBinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "image-policy.example.com"
spec:
  policyName: "image-policy.example.com"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: myapp
